--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Survey</title>
 </head>
 <body>
-  <!-- Name, fav food, fav music, and any other info we like-->
 <div class="container">
   <h1>Survey</h1>
   <form id="survey-1">
@@ -20,6 +19,7 @@
       <label for="lastName">Last Name:</label>
       <input id="lastName" class="form-control" type="text">
     </div>
+    <div>
     <h2>Choose your favorite food:</h2>
     <select class="form-control" id="favFood">
       <option>Burritos</option>
@@ -27,6 +27,7 @@
       <option>Cookies</option>
       <option>Tacos</option>
     </select>
+    </div>
     <br>
     <h2>Choose your favorite type of music:</h2>
     <div class="radio">
