--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <br>
     <h2>Choose your favorite type of music:</h2>
-    <div class="radio">
+    <div id="music">
       <label>
         <input type="radio" name="music" value="rap/rock" checked>
         Rap/Rock
